# internal/controllers/http/ws/v1/response_dto.go
@@ -1,5 +1,7 @@
 package v1
 
+import "time"
+
 type CreateChatResponse struct {
 	ID string `json:"id"`
 }
@@ -15,4 +17,13 @@ type LoginUserResponse struct {
 type Chat struct {
 	ID   string `json:"id"`
 	Name string `json:"name"`
+}
+
+type Message struct {
+	ID        string    `json:"id"`
+	Author    string    `json:"author"`
+	ChatID    string    `json:"chat_id"`
+	Content   string    `json:"content"`
+	IsEdited  bool      `json:"is_edited"`
+	CreatedAt time.Time `json:"created_at"`
 }
